# Cpp-Assignments

./: .gitignore  README.md
Assignment2/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  TextRedactor.cpp  bee.txt
Assignments/Assignment1/: file.txt  main.cpp  spacy.txt
Assignments/Assignment2/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  TextRedactor.cpp  TextRedactor.h  main.cpp  output.txt
Assignments/Assignment3/: CMakeLists.txt  main.cpp  rational.cpp  rational.h  rational_calc.cpp  rational_calc.h
Assignments/Assignment4/: CMakeLists.txt  counter.cpp  counter.h  fileCounts.cpp  fileCounts.h  main.cpp  options.cpp  options.h
Assignments/Assignment5/: CMakeLists.txt  main.cpp  outputFile.cpp  outputFile.h
Assignments/Assignment6/: CMakeLists.txt  String.cpp  String.h  main.cpp
Assignments/Assignment7/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
Exam/example_exam_2024/task_1_2/: CMakeLists.txt  NumberFinder.cpp  NumberFinder.h  Options.cpp  task_1_2.cpp
Exam/example_exam_2024/task_3/: CMakeLists.txt  IntVector.cpp  IntVector.h
Exam/example_exam_2024_live/: CMakeLists.txt  DESCRIPTION.md
Exam/example_exam_2024_live/task_1_2/: NumberFinder.cpp  NumberFinder.h  Options.cpp  Options.h  task_1_2.cpp
Exam/example_exam_2024_live/task_3/: CMakeLists.txt  IntVector.cpp  IntVector.h  task_3.cpp
Exam/try2/example_exam_2024/task_1_2/: NumberFinder.cpp  NumberFinder.h  Options.cpp  file.txt  task_1_2.cpp
Exam/try2/example_exam_2024/task_3/: IntVector.cpp  IntVector.h  task_3.cpp
Labs/Labs1/: main.cpp
Labs/Labs2/: CMakeLists.txt  moneyDatabase.cpp  moneyDatabase.h
Labs/Labs2/Redo/: CMakeLists.txt  deposit.h  main.cpp  moneyDatabase.cpp
Labs/Labs3/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
Labs/Labs4/labs_04/: main.cpp  options.cpp
Labs/Labs5/: CMakeLists.txt  main.cpp  word_counter.cpp  word_counter.h
Labs/Labs6/: CMakeLists.txt  main.cpp  numbers.cpp  numbers.h
Labs/temp/: complex.cpp  complex.h  main.cpp
other/Assignment2/: CMakeLists.txt  Dictionary.cpp  TextRedactor.cpp  bee_replacements.txt  main.cpp  smelly_replacements.txt
